# cfg-string-generator

./: .gitignore  README.md  cfg_string_generator.hpp
examples/: CMakeLists.txt  main.cpp
